--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
         <div class="logo-box">
             <div class="frame-border"></div>
             <div class="frame-border-rotated"></div>
-            <img src="C:\Users\jaith\Downloads\TF letter favicon in red colour (2).jpg"
+            <img src="C:/Users/jaith/Downloads/TF letter favicon in red colour (2).jpg"
                  alt="Times of Fortune Logo"
                  class="logo-img">
         </div>
@@ -724,7 +724,7 @@
 
             <div class="right-section">
                 <div class="team-image-frame">
-                    <img src="C:\Users\jaith\OneDrive\Desktop\times.jpg" alt="Times of Fortune Team" class="team-image">
+                    <img src="C:/Users/jaith/OneDrive/Desktop/times.jpg" alt="Times of Fortune Team" class="team-image">
                     <div class="image-overlay">
                         <div class="image-caption">OUR TEAM • TIMES OF FORTUNE</div>
                     </div>
@@ -745,4 +745,5 @@
         }
     </script>
 </body>
+
 </html>
